<?xml version="1.0"?>
<package format="3">
  <name>mission_control_gui</name>
  <version>0.0.1</version>
  <description>PyQt5 GUI for dispatching Nav2 waypoints</description>
  <maintainer email="you@example.com">cherry</maintainer>
  <license>Apache-2.0</license>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
